Added pose landmark file, updated README and requirements

--- a/ASLTranslatorProject/requirements.txt
+++ b/ASLTranslatorProject/requirements.txt
@@ -1,6 +1,6 @@
 joblib==1.2.0
 keytotext==2.3.2
-mediapipe==0.8.7.3
+mediapipe==0.8.9.1
 natsort==7.1.1
 numpy==1.24.2
 omegaconf==2.1.0
@@ -9,3 +9,4 @@ opencv_contrib_python_headless==4.7.0.72
 opencv_python==4.7.0.72
 OpenHands==0.1.4.1
 tqdm==4.65.0
+protobuf==3.20.*
